--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "Convenient helpers for dingo/api",
     "require": {
         "php": ">=5.5.9",
-        "shrikeh/teapot": "~1.0"
+        "shrikeh/teapot": "^1.0"
     },
     "autoload": {
         "psr-4": {
