--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         "Laravel-Domesticated",
         "Laravel Domesticated"
     ],
-    "license": "MIT",
+    "license": "MPL-2.0",
     "authors": [
         {
             "name": "Brian Faust",
